# fetal-mri-calculator

./: .gitignore  Open Fetal MRI Calculator.command  README.md  pyproject.toml
.github/workflows/: build.yml
Fetal MRI Calculator Launcher.app/Contents/: Info.plist
Fetal MRI Calculator.app/Contents/: Info.plist
Fetal MRI Calculator.app/Contents/MacOS/: fetal-mri-calculator-launcher
app/: main.py
app/data/: harreld_2011_corpus_callosum.json  kyriakopoulou_2017_formulas.json
app/domain/: models.py
app/services/: calculator.py  differentials.py  evidence.py  normative_models.py  registry.py  reporting.py
app/static/: app.js  styles.css
app/templates/: base.html  index.html
app/templates/partials/: results.html
docs/clinical/: source-notes.md
scripts/: build.py
tests/: test_calculator.py  test_web.py
