[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetal-mri-calculator"
version = "0.1.0"
description = "Local-first fetal brain MRI biometry calculator"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.1",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.27",
  "scipy>=1.17.1",
  "uvicorn>=0.46.0",
]

[project.scripts]
fetal-mri-calculator = "app.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
